# gen/http/oauth/server/encode_decode.go
@@ -1,0 +1,50 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// oauth HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/sm43/goa-crud/design
+
+package server
+
+import (
+	"context"
+	"io"
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeOauthResponse returns an encoder for responses returned by the oauth
+// oauth endpoint.
+func EncodeOauthResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res := v.(string)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeOauthRequest returns a decoder for requests sent to the oauth oauth
+// endpoint.
+func DecodeOauthRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			body OauthRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		payload := NewOauthPayload(&body)
+
+		return payload, nil
+	}
+}
