# gen/http/oauth/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the oauth service.
+//
+// Command:
+// $ goa gen github.com/sm43/goa-crud/design
+
+package server
+
+// OauthOauthPath returns the URL path to the oauth service oauth HTTP endpoint.
+func OauthOauthPath() string {
+	return "/oauth/redirect"
+}
