# gen/http/oauth/server/server.go
@@ -1,0 +1,184 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// oauth HTTP server
+//
+// Command:
+// $ goa gen github.com/sm43/goa-crud/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+	"regexp"
+
+	oauth "github.com/sm43/goa-crud/gen/oauth"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+	"goa.design/plugins/v3/cors"
+)
+
+// Server lists the oauth service endpoint HTTP handlers.
+type Server struct {
+	Mounts []*MountPoint
+	Oauth  http.Handler
+	CORS   http.Handler
+}
+
+// ErrorNamer is an interface implemented by generated error structs that
+// exposes the name of the error as defined in the design.
+type ErrorNamer interface {
+	ErrorName() string
+}
+
+// MountPoint holds information about the mounted endpoints.
+type MountPoint struct {
+	// Method is the name of the service method served by the mounted HTTP handler.
+	Method string
+	// Verb is the HTTP method used to match requests to the mounted handler.
+	Verb string
+	// Pattern is the HTTP request path pattern used to match requests to the
+	// mounted handler.
+	Pattern string
+}
+
+// New instantiates HTTP handlers for all the oauth service endpoints using the
+// provided encoder and decoder. The handlers are mounted on the given mux
+// using the HTTP verb and path defined in the design. errhandler is called
+// whenever a response fails to be encoded. formatter is used to format errors
+// returned by the service methods prior to encoding. Both errhandler and
+// formatter are optional and can be nil.
+func New(
+	e *oauth.Endpoints,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) *Server {
+	return &Server{
+		Mounts: []*MountPoint{
+			{"Oauth", "POST", "/oauth/redirect"},
+			{"CORS", "OPTIONS", "/oauth/redirect"},
+		},
+		Oauth: NewOauthHandler(e.Oauth, mux, decoder, encoder, errhandler, formatter),
+		CORS:  NewCORSHandler(),
+	}
+}
+
+// Service returns the name of the service served.
+func (s *Server) Service() string { return "oauth" }
+
+// Use wraps the server handlers with the given middleware.
+func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.Oauth = m(s.Oauth)
+	s.CORS = m(s.CORS)
+}
+
+// Mount configures the mux to serve the oauth endpoints.
+func Mount(mux goahttp.Muxer, h *Server) {
+	MountOauthHandler(mux, h.Oauth)
+	MountCORSHandler(mux, h.CORS)
+}
+
+// MountOauthHandler configures the mux to serve the "oauth" service "oauth"
+// endpoint.
+func MountOauthHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := handleOauthOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/oauth/redirect", f)
+}
+
+// NewOauthHandler creates a HTTP handler which loads the HTTP request and
+// calls the "oauth" service "oauth" endpoint.
+func NewOauthHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeOauthRequest(mux, decoder)
+		encodeResponse = EncodeOauthResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "oauth")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "oauth")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountCORSHandler configures the mux to serve the CORS endpoints for the
+// service oauth.
+func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
+	h = handleOauthOrigin(h)
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("OPTIONS", "/oauth/redirect", f)
+}
+
+// NewCORSHandler creates a HTTP handler which returns a simple 200 response.
+func NewCORSHandler() http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(200)
+	})
+}
+
+// handleOauthOrigin applies the CORS response headers corresponding to the
+// origin for the service oauth.
+func handleOauthOrigin(h http.Handler) http.Handler {
+	spec0 := regexp.MustCompile(".*localhost")
+	origHndlr := h.(http.HandlerFunc)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		origin := r.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			origHndlr(w, r)
+			return
+		}
+		if cors.MatchOriginRegexp(origin, spec0) {
+			w.Header().Set("Access-Control-Allow-Origin", origin)
+			w.Header().Set("Vary", "Origin")
+			w.Header().Set("Access-Control-Expose-Headers", "X-Time, X-Api-Version")
+			w.Header().Set("Access-Control-Max-Age", "100")
+			w.Header().Set("Access-Control-Allow-Credentials", "true")
+			if acrm := r.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				w.Header().Set("Access-Control-Allow-Methods", "GET, POST")
+				w.Header().Set("Access-Control-Allow-Headers", "X-Shared-Secret")
+			}
+			origHndlr(w, r)
+			return
+		}
+		origHndlr(w, r)
+		return
+	})
+}
