# gen/http/oauth/server/types.go
@@ -1,0 +1,28 @@
+// Code generated by goa v3.1.1, DO NOT EDIT.
+//
+// oauth HTTP server types
+//
+// Command:
+// $ goa gen github.com/sm43/goa-crud/design
+
+package server
+
+import (
+	oauth "github.com/sm43/goa-crud/gen/oauth"
+)
+
+// OauthRequestBody is the type of the "oauth" service "oauth" endpoint HTTP
+// request body.
+type OauthRequestBody struct {
+	// Access github token
+	Token *string `form:"token,omitempty" json:"token,omitempty" xml:"token,omitempty"`
+}
+
+// NewOauthPayload builds a oauth service oauth endpoint payload.
+func NewOauthPayload(body *OauthRequestBody) *oauth.OauthPayload {
+	v := &oauth.OauthPayload{
+		Token: body.Token,
+	}
+
+	return v
+}
